--- a/sass/abstract/_mixins.scss
+++ b/sass/abstract/_mixins.scss
@@ -1,1 +1,9 @@
-
+// Button reset thanks to: https://fvsch.com/styling-buttons
+@mixin button-reset {
+	padding: 0;
+	border: none;
+	font: inherit;
+	color: inherit;
+	background-color: transparent;
+	cursor: pointer;
+}
