--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -1,6 +1,14 @@
 .menu {
-	&__container {
-		display: flex;
-		justify-content: flex-end;
+	display: flex;
+	justify-content: flex-end;
+	&__btn {
+		@include button-reset;
+		padding: 1rem 2rem;
+		&__lang {
+			display: block;
+			padding: 1rem 2rem;
+		}
+		&__theme {
+		}
 	}
 }
