setup proper dev enviroment and added font

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,6 +1,6 @@
 body {
-	font: normal normal 500 1.6rem/1.6;
+	font: normal normal 500 1.6rem/1.6 $ff;
 }
 h1 {
-	font: normal normal 700 2.4em/1.6;
+	font: normal normal 700 2.4em/1.6 $ff;
 }
