--- a/sass/abstract/_mixins.scss
+++ b/sass/abstract/_mixins.scss
@@ -7,3 +7,12 @@
 	background-color: transparent;
 	cursor: pointer;
 }
+// Non-selctable
+@mixin no-select {
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
