--- a/sass/sections/_welcome.scss
+++ b/sass/sections/_welcome.scss
@@ -9,14 +9,17 @@
 	&__2 {
 	}
 	&__name {
+		@include no-select;
+		font: normal normal 500 2.4em/1.6 $ff;
 	}
 	&__profession {
 		align-self: center;
 		position: relative;
 		display: flex;
 		justify-content: center;
-		font-size: 2.5rem;
 		&s {
+			@include no-select;
+			font: normal normal 500 2.4em/1.6 $ff;
 			z-index: 1;
 			position: relative;
 		}
@@ -28,12 +31,12 @@
 	}
 	&__separator {
 		position: absolute;
-		top: 8%;
+		top: -30%;
 		opacity: .6;
 		z-index: 0;
 		transform: skewX(-30deg);
-		height: 10rem;
-		width: 2rem;
+		height: 20rem;
+		width: 4rem;
 		background: $grad;
 	}
 
